# agentEval

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
backend/app/: main.py  models.py  worker.py
backend/app/api/: routes.py
backend/app/core/: config.py  queue.py  store.py
backend/app/db/: database.py  orm.py  repository.py
backend/app/runner/: engine.py  generator.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/new/: page.tsx
dashboard/app/runs/[runId]/: page.tsx
dashboard/components/: Navbar.tsx  StatusBadge.tsx
docs/: agenteval-action.yml
examples/: custom_agent_wrapper.py  langchain_wrapper.py
mock_agent/: server.py
scripts/: e2e_test.py
tests/: conftest.py  test_engine.py  test_generator.py
